<resources>
    <string name="app_name">Calculator</string>
    <string name="tab_palindrome">PALINDROME</string>
    <string name="tab_factorial">FACTORIAL</string>
    <string name="tab_pairs">Pairs</string>
    <string name="calculate">CALCULATE</string>
    <string name="hint_pairs">Enter the pairs(Example: 12 34 45 32 12 45 32 4)</string>
    <string name="hint_number">Enter the number</string>
    <string name="pal_correct">Palindrome</string>
    <string name="pal_incorrect">Not a palindrome</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="recover_title">Please, enter your email to recover your password</string>
    <string name="email">Email</string>
    <string name="send">SEND</string>
    <string name="account_name_sample">jennifer.wilson</string>
    <string name="password_sample">**************</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="registration">Registration</string>
    <string name="registration_label">To book your course please fill in the registration form</string>
    <string name="children">CHILDREN</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="add_kids">More kids can be added</string>
    <string name="facebook_app_id">1150993768307096</string>
    <string name="empty_field_err">this field should not be empty</string>
    <string name="no_pairs">Input doesn\'t consist correct pairs</string>
    <string name="pairs_only">provide only pairs and more than one pair</string>
</resources>
